<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Text Viewer</string>
    <string name="app_version">0.2.0</string>
    <string name="main_inst">This is an example text.\nPlease use something like file-manager to open a text-like file.</string>
    <string name="browse_file">Browse text files</string>
    <string name="recent_file">Recent files</string>
    <string name="menu_title_main_preferences">Settings</string>
    <string name="menu_title_main_open">Open File</string>
    <string name="menu_title_main_clear_recent">Clear Recent Files</string>
    <string name="menu_title_viewer_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="config_title_colortheme">Color theme</string>
    <string name="config_title_fontsize">Font size</string>
    <string name="config_title_usemonospacefonts">Use monospace fonts</string>
    <string name="config_title_scrollbyvolumekeys">Scroll by volume keys</string>
    <string name="config_title_scrolllines">Scroll height</string>
    <string name="config_title_charsetpreference">Preferred Lang.</string>
    <string name="config_title_version">Text Viewer Version</string>
</resources>
