<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="first_preferencescreen">
    <ListPreference
            android:key="colortheme"
            android:title="@string/config_title_colortheme"
	    android:defaultValue="black"
	    android:entries="@array/entries_colorthemes"
	    android:entryValues="@array/entry_values_colorthemes" />
    <com.gmail.altakey.dawne.NumberPickerPreference
        android:key="fontsize"
        android:title="@string/config_title_fontsize"
        android:defaultValue="14"
        android:max="48"
        min="8" />
    <CheckBoxPreference
            android:key="usemonospacefonts"
            android:title="@string/config_title_usemonospacefonts"
	    android:defaultValue="false" />
    <CheckBoxPreference
            android:key="showtitle"
            android:title="@string/config_title_showtitle"
	    android:defaultValue="true" />
    <CheckBoxPreference
            android:key="scrollbyvolumekeys"
            android:title="@string/config_title_scrollbyvolumekeys"
	    android:defaultValue="true" />
    <ListPreference
            android:key="scrolllines"
            android:title="@string/config_title_scrolllines"
	    android:defaultValue="2"
	    android:entries="@array/entries_scrolllines"
	    android:entryValues="@array/entry_values_scrolllines" />
    <ListPreference
            android:key="charsetpreference"
            android:title="@string/config_title_charsetpreference"
	    android:defaultValue="japanese"
	    android:entries="@array/entries_charsetpreference"
	    android:entryValues="@array/entry_values_charsetpreference" />
    <Preference
	android:title="@string/config_title_version"
	android:summary="@string/app_version"
	android:enabled="false"
	/>
</PreferenceScreen> 
